<resources>
    <string name="app_name" translatable="false">Spin to Decide</string>

    <string name="add_2_times_item">Add 2 times item</string>
    <string name="add_new_item">Add new item</string>
    <string name="cancel">Cancel</string>
    <string name="custom_roulette">Custom Roulette</string>
    <string name="default_dialog_title">Select a color</string>
    <string name="delete">Delete</string>
    <string name="delete_item_question">"Are you sure you want to delete the item: "</string>
    <string name="delete_item_result">"Deleted List Item: "</string>
    <string name="delete_list_question">"Are you sure you want to delete the list: "</string>
    <string name="delete_list_result">"Deleted list item: "</string>
    <string name="delete_question_title">Delete?</string>
    <string name="error_list_no_items">There are currently no lists with items. Please create a list with items to continue.</string>
    <string name="error_no_lists">There are currently no lists. Please create a list to continue.</string>
    <string name="general_saved_data">Saved Data.</string>
    <string name="item_edit_title">Edit Item Name</string>
    <string name="item_name">"Item Name: "</string>
    <string name="items_subtitle">Select / Edit List Items</string>
    <string name="list_error_0_items">Cannot select a list with 0 items.</string>
    <string name="list_error_too_few_items">Selected list had to few items. Selecting first list.</string>
    <string name="list_name">List Name</string>
    <string name="lists_dialog_title">New List Name</string>
    <string name="lists_editname">Edit List Name</string>
    <string name="lists_newlist">New List</string>
    <string name="lists_subtitle">Select / Edit Lists</string>
    <string name="main_wheel_error">Please Restart Application.</string>
    <string name="new_item">New Item</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="predefined_roulette">Predefined Roulette</string>
    <string name="press_to_select_amp_long_press_to_edit">Press to select &amp; Long Press to edit</string>
    <string name="restore">Restore</string>
    <string name="restored">Restored factory lists.</string>
    <string name="save">Save</string>
    <string name="saved">SAVE</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_restore_title">Restore?</string>
    <string name="spin_to_decide">Decision Roulette</string>
    <string name="string_items_help_message">Press the + button to add new items to the list.</string>
    <string name="tagmanager_preview_dialog_button">Continue</string>
    <string name="tagmanager_preview_dialog_message">Preview mode updated.</string>
    <string name="tagmanager_preview_dialog_title">Preview</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="language">Language</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="Thank_you">Thank you</string>
    <string name="Your_opinion_matter_to_us">Your Opinion Matter To Us!</string>
    <string name="If_you_enjoy_our">If you enjoy our Spin Wheel, would you mind rating us on the Google Play, then?</string>
    <string name="Writing_something">Writing something</string>
    <string name="not_now">Not now</string>
    <string name="The_best_we_can_get">The best we can get :)</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="please_rate_us_some_star">Please rate us some star</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="no_internet_connection">No Internet Connection..</string>
    <string name="showing_ads">Showing Ads...</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="you_need_permission_to_use_the_app">You need permission to use the app</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please Wait...</string>
    <string name="loading">Loading...</string>
    <string name="preview">Preview</string>
    <string name="text_size">Text size</string>
    <string name="slice_repeat">Slice repeat</string>
    <string name="spin_time">Spin time</string>
    <string name="slices">Slices</string>
    <string name="add_new">Add new</string>
    <string name="edit_slice">Edit slice</string>
    <string name="new_slice">New slice</string>
    <string name="background_color">Background color</string>
    <string name="slices_text">Slices text</string>
    <string name="probability">Probability</string>
    <string name="templates_colors">Templates colors</string>
    <string name="you_can_only_enter_16_elements">you can only enter 16 elements</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="please_add_at_least_2_items">Please add at least 2 items</string>
    <string name="edit">Edit</string>
    <string name="no_data_yet">no data yet</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="list_name_is_not_entered_yet">list name is not entered yet</string>
    <string name="insert_successfully">Insert successfully</string>
    <string name="Grant_Permission">Grant Permission</string>
    <string name="Please_grant_all_permissions">Please grant all permissions to access additional functionality.</string>
    <string name="Go_to_setting">Go to setting</string>
    <string name="create_the_spin_wheel_by_selecting_from_a_variety_of_templates">Create the spin wheel by selecting from a variety of templates</string>
    <string name="customize_your_own_spin_wheel_as_you_wish">Customize your own spin wheel as you wish</string>
    <string name="let_s_start_making_your_own_spin_wheel_immediately">Let’s start making your own spin wheel immediately</string>
    <string name="spinner">SPINNER</string>
    <string name="done">Done</string>
    <string name="watch_video_open_roulette">Watch Video Open Roulette</string>
    <string name="are_you_sure_you_want_watch_video_ad">Are you sure you want watch video Ad?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="you_need_to_see_the_ads_to_continue_creating">You need to see the ads to continue creating</string>
    <string name="new_list_name">New list name</string>
    <string name="change_language">Change Language</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="more_app">More app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="exit_app">Exit App</string>
    <string name="are_you_sure_you_want_to_close">Are you sure you want to close?</string>
    <string name="finger_picker">Finger Picker</string>
    <string name="please_touch_more_point">Please touch more point</string>
    <string name="win">Win !</string>
</resources>