<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/change_language"
        android:orderInCategory="100"
        android:title="@string/change_language"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/rate"
        android:orderInCategory="100"
        android:title="@string/rate_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/contact"
        android:orderInCategory="100"
        android:title="@string/more_app"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/privacy"
        android:orderInCategory="100"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />
</menu>