<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="30dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="30dp"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingEnd="24dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/lblListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/linotte_bold"
            android:gravity="center"
            android:text="@string/list_name"
            android:textColor="@color/color_txt_home"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtDisplayAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/linotte_regular"
            android:gravity="center"
            android:text="@string/you_need_to_see_the_ads_to_continue_creating"
            android:textColor="@color/color_name"
            android:textSize="18sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/txtListName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_pen"
            android:fontFamily="@font/linotte_regular"
            android:hint="@string/new_list_name"
            android:maxLength="20"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/color_txt_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ivCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1"
                android:background="@drawable/img_bg_cancel_dialog_new_list"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cancel_dialog_new_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/linotte_regular"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#0085FF"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ivSave"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1"
                android:background="@drawable/img_bg_done_dialog_new_list"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_done_dialog_new_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/linotte_regular"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="#0085FF"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>